[package]
name = "temperature"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "temperature"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
vipers = "1.5.3"
borsh = "0.9"
bytemuck = "1.5.1"
uint = "0.8"
arrayref = "0.3.6"